# erp-template

./: .air.toml  .env.example  .env.json  .gitignore  .golangci.toml  .sqruff  .templui.json  README.md  biome.json  compose.yaml  eslint.config.ts  go.mod  go.sum  main.go  mise.toml  package.json  process-compose.yaml  pyproject.toml  ruff.toml  sqlc.yaml  taplo.toml
.mise-tasks/db/: clean-schema-file
backend/: pyproject.toml
backend/accounts/: admin.py  models.py  mutations.py  queries.py  types.py
backend/accounts/api/: serializers.py  views.py
backend/accounts/fixtures/: users.json
backend/accounts/migrations/: 0001_initial.py
backend/erp/: schema.py  settings.py  urls.py  wsgi.py
backend/erp/api/: urls.py
cmd/server/: main.go
cmd/web/: main.go
db/: schema.sql
db/migrations/: 20250916133209_init.sql  20260131093258_users.sql  20260202165231_sessions.sql
db/queries/: users.sql
internal/app/: app.go  db.go  settings.go
internal/auth/: forms.go  router.go  routes.go
internal/config/: config.go  config_test.go
internal/core/: app.go  db.go  home_page.templ  home_page_templ.go  main_layout.templ  main_layout_templ.go  routes.go  settings.go
internal/database/: database.go  database_test.go  models.go  users.sql.go  wrapper.go
internal/db/: db.go
internal/logging/: logging.go  logging_test.go
internal/orm/: db.go  models.go  users.sql.go
internal/server/: mux.go  (+4 more)
static/: static.go  static_test.go
templates/: index.html
web/: codegen.ts  components.json  package.json  tsconfig.app.json  tsconfig.base.json  vite.config.ts
(+91 files in other folders)
