[project]
name = "erp-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2",
  "django-cors-headers>=4.7.0",
  "djangorestframework>=3.16.0",
  "djangorestframework-jsonapi[django-filter]>=7.1.0",
  "drf-spectacular-jsonapi>=0.5.2",
  "drf-spectacular[sidecar]>=0.28.0",
  "environs[django]>=14.1.1",
]

[dependency-groups]
dev = ["django-stubs>=5.1.3", "djangorestframework-stubs>=3.15.3"]

[tool.basedpyright]
typeCheckingMode = 'basic'
venvPath = '.'
venv = '.venv'
